testdata/baselines/reference/submodule/compiler/accessorInferredReturnTypeErrorInReturnStatement.errors.txt
error TS-1: Pre-emit (2) and post-emit (1) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
accessorInferredReturnTypeErrorInReturnStatement.ts(4,18): error TS2339: Property 'collection' does not exist on type '{ readonly primaryPath: any; }'.


!!! error TS-1: Pre-emit (2) and post-emit (1) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
!!! related TS-1: The excess diagnostics are:
!!! related TS7023 accessorInferredReturnTypeErrorInReturnStatement.ts:2:7: 'primaryPath' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
==== accessorInferredReturnTypeErrorInReturnStatement.ts (1 errors) ====
    export var basePrototype = {
      get primaryPath() {
        var _this = this;
        return _this.collection.schema.primaryPath;
                     ~~~~~~~~~~
!!! error TS2339: Property 'collection' does not exist on type '{ readonly primaryPath: any; }'.
      },  
    };
    